<resources>
    <string name="app_name">SferaProjectTest</string>
    <string name="test_id">ID 123 456 789</string>
    <string name="language_icon_description">Language icon</string>
    <string name="chose_text_button">Choose</string>
    <string name="questionnaires">QUESTIONNAIRES</string>
    <string name="people">PEOPLE</string>
    <string name="about_me_hint">About me</string>
    <string name="test_edit_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</string>
    <string name="dream_and_get">Dream and get</string>
    <string name="wishes">WISHES</string>
    <string name="moments">Moments</string>
    <string name="chronicies">Chronicies</string>
    <string name="share">Share</string>
    <string name="image_for_profile">Image for profile</string>
    <string name="image_for_chronicies">Image For chronicies</string>
    <string name="image_for_moments">Image for moments</string>
    <string name="add_holder_description">Add</string>
    <string name="people_title">People</string>
    <string name="subscribe_text">Subscribe</string>
    <string name="unsubscribe_text">Unsubscribe</string>
    <string name="search">Search</string>
    <string name="cleaning">Cleaning</string>
    <string name="subscribers_tab">SUBSCRIBERS</string>
    <string name="subscriptions_tab">SUBSCRIPTIONS</string>
    <string name="mutually_tab">MUTUALLY</string>
</resources>